--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,19 @@ dependencies:
   path_provider: ^2.1.1
   share: ^2.0.4
   pdf: ^3.10.4
+  lottie: ^2.6.0
+  get_it: ^7.6.4
+  delayed_display: ^2.0.0
+  http: ^1.1.0
+  dart_sentiment: ^0.0.9
+  get: ^4.6.6
+  flutter_screenutil: ^5.8.4
+  video_player: ^2.7.2
+  flick_video_player: ^0.5.0
+  google_fonts: ^6.1.0
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/aa.png
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
