--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,9 @@ dependencies:
   video_player: ^2.7.2
   flick_video_player: ^0.5.0
   google_fonts: ^6.1.0
-
+  flutter_plus: ^1.0.0
+  flutter_tts: ^3.8.3
+  animated_text_kit: ^4.2.2
 
 
 
