--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,16 +43,23 @@ dependencies:
   lottie: ^2.6.0
   get_it: ^7.6.4
   delayed_display: ^2.0.0
-  http: ^1.1.0
+  # http: ^1.1.0
   dart_sentiment: ^0.0.9
   get: ^4.6.6
   flutter_screenutil: ^5.8.4
   video_player: ^2.7.2
   flick_video_player: ^0.5.0
-  google_fonts: ^6.1.0
+  # google_fonts: ^6.1.0
   flutter_plus: ^1.0.0
   flutter_tts: ^3.8.3
   animated_text_kit: ^4.2.2
+  flutter_slidable: ^3.0.0
+  flutter_heatmap_calendar: ^1.0.5
+  url_launcher: ^6.1.14
+  http: ^0.13.6
+  google_fonts: ^4.0.4
+  dialog_flowtter: ^0.3.3
+  # dialog_flowtter: 0.3.3
 
 
 
@@ -94,12 +101,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+fonts:
+  - family: exo
+    fonts:
+       - asset: fonts/Exo-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
